[package]
name = "hinterland"
version = "0.3.12"
authors = ["Mikko Kaistinen <mikko.kaistinen@kapsi.fi>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
cgmath = "0.17.0"
crossbeam-channel = "0.3.9"
getopts = "0.2.21"
gfx_core = "0.9.1"
gfx_device_gl = "0.16.2"
gfx = "0.18.1"
glutin = "0.21.1"
genmesh = "0.6.2"
image = "0.22.1"
json = "0.11.15"
num = "0.2.0"
pathfinding = "1.1.12"
rand = "0.7.0"
rodio = "0.9.0"
rusttype = "0.7.7"
specs = "0.15.0"
tiled = "0.8.0"

[features]
godmode = []
framerate = []
windowed = []
