[package]
name = "hinterland"
version = "0.3.12"
authors = ["Mikko Kaistinen <mikko.kaistinen@kapsi.fi>"]
edition = "2018"

[dependencies]
cgmath = "0.17.0"
crossbeam-channel = "0.4.0"
getopts = "0.2.21"
gfx_core = "0.9.2"
gfx_device_gl = "0.16.2"
gfx = "0.18.2"
glutin = "0.21.2"
genmesh = "0.6.2"
image = "0.22.3"
json = "0.12.0"
num = "0.2.0"
pathfinding = "2.0.0"
rand = "0.7.2"
rodio = "0.10.0"
rusttype = "0.8.2"
specs = "0.15.1"
tiled = "0.8.1"

[features]
godmode = []
framerate = []
